Bug 741689 - Disable poorly implemented GL extensions on load - r=bjacob